--- a/home.html
+++ b/home.html
@@ -64,8 +64,8 @@
 
         .profile-img:hover {
             transform: scale(1.1); /* Moderne, klare Skalierung ohne Swipe */
-            box-shadow: 0 0 20px rgba(149, 156, 247, 0.8); /* Sekundär-Farbe Glow */
-            border-color: #57F287; /* Primär-Farbe: Hellgrün */
+            box-shadow: 0 0 20px rgba(64, 74, 220, 0.8); /* Sekundär-Farbe Glow */
+            border-color: #5865f2; /* Primär-Farbe: Hellgrün */
         }
 
         .profile-section h1 {
